force-app/main/default/objects/ilms__User_Certification__c/ilms__User_Certification__c.object-meta.xml
<CustomObject>
    <label>User Certification</label>
    <nameField>
        <displayFormat>UserCert-{00000}</displayFormat>
        <label>User Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>