force-app/main/default/objects/ilms__User_Certification__c/fields/ilms__Certification__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>ilms__Certification__c</referenceTo>
    <relationshipLabel>User Certification</relationshipLabel>
    <relationshipName>Certification</relationshipName>
    <type>Lookup</type>
</CustomField>