force-app/main/default/objects/ilms__User_Certification__c/fields/ilms__Certification_Path__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification_Path__c</fullName>
    <label>Certification Path</label>
    <referenceTo>ilms__Certification_Path__c</referenceTo>
    <relationshipLabel>User Certifications</relationshipLabel>
    <relationshipName>User_Certifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>