force-app/main/default/objects/ilms__User_Certification__c/fields/ilms__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ilms__Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>