force-app/main/default/objects/ilms__User_Certification__c/fields/ilms__Number_of_Courses__c.field-meta.xml
<CustomField>
    <fullName>ilms__Number_of_Courses__c</fullName>
    <label>Number of Courses</label>
    <summaryForeignKey>ilms__User_Certification_Connector__c.ilms__User_Certification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>